feat: grid creation

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Bingo</title>
   </head>
   <body>
-    <canvas heigh="400" width="400"></canvas>
+    <canvas height="400" width="400"></canvas>
     <div class="controls-wrap">
       <ul id="events"></ul>
       <div class="controls">
